work section added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </ul>
 
             <button
-              class="border rounded-full border-gray text-[16px] py-[16px] px-[48px] font-medium text-white leading-[28px]"
+              class="border rounded-full border-gray text-[16px] py-[16px] px-[48px] font-medium text-white leading-[28px] hover:bg-yellow hover:text-dark_blue_color"
             >
               Contact Us
             </button>
@@ -118,6 +118,48 @@
       </div>
     </section>
     <!-- banner part end here -->
+     <!--===================
+      work part start here 
+     ======================-->
+      <section class="bg-light_gray">
+        <div class="container max-w-[1280px] mx-auto">
+          <div class="flex pt-[128px]">
+            <div>
+            <h3 class="font-primary_fonts text-[48px] leading-[64px] font-semibold  text-dark_blue_color">How we work</h3>
+            <p class="font-primary_fonts text-[16px] leading-[28px] font-normal  text-dark_blue_color opacity-70 py-[16px] w-[320px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+              
+            </p>
+            <a class="font-primary_fonts text-[18px] leading-[32px] font-medium text-Royal_blue" href="#">Get in touch with us  <i class="fa-solid fa-arrow-right-long text-Royal_blue"></i></a>
+          </div>
+          <div class="grid grid-cols-2 gap-5 ps-[220px]">
+            <div>
+              <img src="./images/pointer 1 (1).png" alt="pointer 1 (1).png"> 
+              <h2 class="w-[303px] font-primary_fonts text-[32px] leading-[48px] font-medium  text-dark_blue_color py-[12px]">Strategy</h2>
+              <p class="font-primary_fonts text-[16px] leading-[28px] font-normal  text-dark_blue_color opacity-70 w-[320px]">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
+            </div>
+            <div>
+              <img src="./images/pointer 1 (1).png" alt="pointer 1 (1).png"> 
+              <h2 class="w-[303px] font-primary_fonts text-[32px] leading-[48px] font-medium  text-dark_blue_color py-[12px]">Strategy</h2>
+              <p class="font-primary_fonts text-[16px] leading-[28px] font-normal  text-dark_blue_color opacity-70 w-[320px]">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
+            </div>
+            <div>
+              <img src="./images/pointer 1 (1).png" alt="pointer 1 (1).png"> 
+              <h2 class="w-[303px] font-primary_fonts text-[32px] leading-[48px] font-medium  text-dark_blue_color py-[12px]">Strategy</h2>
+              <p class="font-primary_fonts text-[16px] leading-[28px] font-normal  text-dark_blue_color opacity-70 w-[320px]">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
+            </div>
+            <div>
+              <img src="./images/pointer 1 (1).png" alt="pointer 1 (1).png"> 
+              <h2 class="w-[303px] font-primary_fonts text-[32px] leading-[48px] font-medium  text-dark_blue_color py-[12px]">Strategy</h2>
+              <p class="font-primary_fonts text-[16px] leading-[28px] font-normal  text-dark_blue_color opacity-70 w-[320px]">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam .</p>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
+
+
+     <!-- work part end here -->
+
     <!--===========================
          featured part start here
         ============================ -->
@@ -161,11 +203,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
-
     <!-- featured part end here -->
 
 <!-- client part start here -->
