projects parts added

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </p>
             <a class="font-primary_fonts text-[18px] leading-[32px] font-medium text-Royal_blue" href="#">Get in touch with us  <i class="fa-solid fa-arrow-right-long text-Royal_blue"></i></a>
           </div>
-          <div class="grid grid-cols-2 gap-5 ps-[220px]">
+          <div class="grid grid-cols-2 gap-5 ps-[220px] pb-[128px]">
             <div>
               <img src="./images/pointer 1 (1).png" alt="pointer 1 (1).png"> 
               <h2 class="w-[303px] font-primary_fonts text-[32px] leading-[48px] font-medium  text-dark_blue_color py-[12px]">Strategy</h2>
@@ -156,9 +156,40 @@
           </div>
         </div>
       </section>
-
-
      <!-- work part end here -->
+     <!--====================
+       projects section added
+      ======================= -->
+      <section>
+        <div class="container max-w-[1280px] mx-auto">
+          <div class="flex justify-between pt-[152px]  pb-[61px]">
+            <h2 class="font-primary_fonts text-[48px] leading-[64px] font-semibold text-dark_blue_color ">View our projects</h2>
+            <a class="font-primary_fonts text-[16px] leading-[28px] font-medium text-dark_blue_color href="">View More <i class="fa-solid fa-arrow-right-long"></i></a>
+          </div>
+          <div class="flex">
+          <div class="bg-projects_image bg-cover bg-center bg-no-repeat w-full text-white">
+           <div class="overly bg-royal w-96  pb-[76px]">
+             <h3 class="pt-[312px] font-primary_fonts text-[24px] leading-[36px] font-semibold  px-[48px]">Workhub office Webflow Webflow Design</h3>
+            <p class=" font-primary_fonts text-[16px] leading-[28px] font-medium  px-[48px] text-white pt-[24px] pb-[44px]">Euismod faucibus turpis eu gravida mi. Pellentesque et velit aliquam </p>
+            <a class=" font-primary_fonts text-[16px] leading-[28px] font-medium  px-[48px] text-yellow" href="#">View project  <i class="fa-solid fa-arrow-right-long"></i></a>
+           </div>
+          </div>
+          <div class="ps-[30px]">
+           <div class="bg-projects_image_two bg-cover bg-center bg-no-repeat w-full h-[50%] ">
+            <div class="overly bg-royal w-full  pb-[60px] ">
+            <h3 class="text-white pt-[90px] font-primary_fonts text-[24px] leading-[36px] font-semibold mb-[20px] px-[48px]"> Unisaas Website 
+              Design</h3>
+               <a class=" font-primary_fonts text-[16px] leading-[28px] font-medium  px-[48px] text-yellow" href="#">View project  <i class="fa-solid fa-arrow-right-long"></i></a>
+           </div>
+           </div>
+            <img class="w-full h-[50%] " src="./images/Card (1).png" alt="Card (1)">
+          </div>
+          </div>
+        </div>
+      </section>
+
+
+      <!-- project section end  -->
 
     <!--===========================
          featured part start here
