--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     ===========================-->
     <section class="bg-bg_color text-white">
       <div class="container max-w-[1280px] mx-auto">
-        <div class="flex justify-between py-[30px] bg-nav_color">
+        <div class="flex justify-between py-[32px] bg-nav_color">
           <img
-            class=""
-            src="./images/Finsweet white logo 1.png"
-            alt="Finsweet white logo 1.png"
+            class="w-[122px] h-[28px]"
+            src="./images/Logo (3).png"
+            alt="Finsweet white logo 3.png"
           />
           <div class="flex justify-center items-center">
             <ul class="flex">
@@ -102,9 +102,10 @@
                 View Our Work
               </button>
               <a
-                class="ps-[39px] font-primary_fonts text-[16px] text-white font-medium leading-[28px] hover:text-dark_blue_color hover:bg-yellow rounded-full  px-[56px] py-[16px] hover:transition ease-out duration-500 "
+                class="ps-[39px] font-primary_fonts text-[16px] text-white font-medium leading-[28px] hover:text-dark_blue_color hover:bg-yellow rounded-full px-[56px] py-[16px] hover:transition ease-out duration-500"
                 href="#"
-                >View Price <i class="fa-solid fa-arrow-right-long align-middle"></i
+                >View Price
+                <i class="fa-solid fa-arrow-right-long align-middle"></i
               ></a>
             </div>
           </div>
@@ -226,22 +227,24 @@
         </div>
         <div class="flex">
           <div
-            class="bg-projects_image bg-cover bg-center bg-no-repeat w-[843px]  h-[596px] text-white group "
+            class="bg-projects_image bg-cover bg-center bg-no-repeat w-[843px] h-[596px] text-white group"
           >
-            <div class="overly w-96 pb-[76px] h-[596px] hidden duration-200  group-hover:block group-hover:bg-project_overly_color">
+            <div
+              class="overly w-96 pb-[76px] h-[596px] hidden duration-200 group-hover:block group-hover:bg-project_overly_color"
+            >
               <h3
-                class="pt-[312px] font-primary_fonts text-[24px] leading-[36px] font-semibold px-[48px] "
+                class="pt-[312px] font-primary_fonts text-[24px] leading-[36px] font-semibold px-[48px]"
               >
                 Workhub office Webflow Webflow Design
               </h3>
               <p
-                class="font-primary_fonts text-[16px] leading-[28px] font-medium px-[48px] text-white pt-[24px] pb-[44px]  "
+                class="font-primary_fonts text-[16px] leading-[28px] font-medium px-[48px] text-white pt-[24px] pb-[44px]"
               >
                 Euismod faucibus turpis eu gravida mi. Pellentesque et velit
                 aliquam
               </p>
               <a
-                class="font-primary_fonts text-[16px] leading-[28px] font-medium px-[48px] text-yellow  "
+                class="font-primary_fonts text-[16px] leading-[28px] font-medium px-[48px] text-yellow"
                 href="#"
                 >View project <i class="fa-solid fa-arrow-right-long"></i
               ></a>
@@ -249,9 +252,11 @@
           </div>
           <div class="ps-[30px]">
             <div
-              class="bg-projects_image_two  bg-cover bg-center bg-no-repeat w-full w-[404px] h-[280px] mb-[32px] group "
+              class="bg-projects_image_two bg-cover bg-center bg-no-repeat w-full w-[404px] h-[280px] mb-[32px] group"
             >
-              <div class="overly group-hover:bg-project_overly_color w-full h-full  hidden group-hover:block  duration-200">
+              <div
+                class="overly group-hover:bg-project_overly_color w-full h-full hidden group-hover:block duration-200"
+              >
                 <h3
                   class="text-white pt-[90px] font-primary_fonts text-[24px] leading-[36px] font-semibold mb-[20px] px-[48px]"
                 >
@@ -264,11 +269,7 @@
                 ></a>
               </div>
             </div>
-            <img
-              class="w-full "
-              src="./images/Card (1).png"
-              alt="Card (1)"
-            />
+            <img class="w-full" src="./images/Card (1).png" alt="Card (1)" />
           </div>
         </div>
       </div>
@@ -453,6 +454,7 @@
         frequently questions part
     =================================-->
 
+   
     <!--frequently Question part ends -->
     <!--===========================
          inquiry part start here 
@@ -508,7 +510,8 @@
           <p
             class="font-primary_fonts text-[18px] pt-24px text-gray font-medium leading-[32px] text-gray pt-[28px] text-center"
           >
-            Get in touch with us <i class="fa-solid fa-arrow-right-long align-middle"></i>
+            Get in touch with us
+            <i class="fa-solid fa-arrow-right-long align-middle"></i>
           </p>
         </div>
       </div>
@@ -550,7 +553,10 @@
             <a
               class="text-font-primary_fonts text-[16px] font-medium leading-[28px] pb-[24px] pb-[32px] text-dark_blue_color"
               href="#"
-              >Read More <i class="fa-solid fa-arrow-right-long text-[20px] align-middle"></i
+              >Read More
+              <i
+                class="fa-solid fa-arrow-right-long text-[20px] align-middle"
+              ></i
             ></a>
           </div>
           <div>
@@ -578,7 +584,10 @@
             <a
               class="text-font-primary_fonts text-[16px] font-medium leading-[28px] pb-[24px] pb-[32px] text-dark_blue_color"
               href="#"
-              >Read More <i class="fa-solid fa-arrow-right-long text-[20px] align-middle"></i
+              >Read More
+              <i
+                class="fa-solid fa-arrow-right-long text-[20px] align-middle"
+              ></i
             ></a>
           </div>
           <div>
@@ -606,7 +615,10 @@
             <a
               class="text-font-primary_fonts text-[16px] font-medium leading-[28px] pb-[24px] pb-[32px] text-dark_blue_color"
               href="#"
-              >Read More <i class="fa-solid fa-arrow-right-long text-[20px] align-middle"></i
+              >Read More
+              <i
+                class="fa-solid fa-arrow-right-long text-[20px] align-middle"
+              ></i
             ></a>
           </div>
         </div>
