--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="container max-w-[1280px] mx-auto">
         <div class="flex justify-between py-[32px] bg-nav_color">
           <img
-            class="w-[122px] h-[28px]"
+            class="w-[122px] h-[28px] mt-[16px]"
             src="./images/Logo (3).png"
             alt="Finsweet white logo 3.png"
           />
@@ -453,8 +453,8 @@
     <!--==============================
         frequently questions part
     =================================-->
-
    
+
     <!--frequently Question part ends -->
     <!--===========================
          inquiry part start here 
