--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </p>
             <div class="flex items-center pt-[44px]">
               <button
-                class="text-gray hover:text-dark_blue_color hover:bg-yellow rounded-full font-secondary_fonts text-[18px] font-semibold leading-[32px] px-[56px] py-[16px] hover:transition ease-out duration-500 me-2"
+                class="text-white hover:text-dark_blue_color hover:bg-yellow rounded-full font-secondary_fonts text-[18px] font-semibold leading-[32px] px-[56px] py-[16px] hover:transition ease-out duration-500 me-2"
               >
                 View Our Work
               </button>
@@ -391,7 +391,7 @@
     <!-- featured part end here -->
 
     <!-- client part start here -->
-    <section class="bg- light_gray">
+    <section class="bg-light_gray border-y border-base-100  shadow-2xl shadow-white/50">
       <div class="container max-w-[1280px] mx-auto flex">
         <div class="pt-[130px] pb-[192px] max-w-[327px]">
           <h2
@@ -453,13 +453,70 @@
     <!--==============================
         frequently questions part
     =================================-->
-   
+    <section>
+      <div class="container w-[1280px] mx-auto">
+        <div class="grid grid-cols-12 py-[128px]">
+          <div class="col-span-4">
+            <h3 class="pb-[16px] font-primary_fonts text-[38px] leading-[56px] font-semibold">Frequently asked questions</h3>
+            <p class="font-primary_fonts text-[18px] leading-[32px] font-medium text-Royal_blue hover:text-dark_blue_color"
+            href="#">Contact us for more info</p>
+          </div>
+          <div class="col-span-8">
+            <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+               <span class="pe-12 text-Royal_blue">01</span> How much time does it take?
+              </div>
+              <div class="collapse-content ps-[92px] pb-3">
+                <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                <span class="pe-12 text-Royal_blue">02</span>What is your class naming convention?
+              </div>
+              <div class="collapse-content ps-[92px] pb-3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                <span class="pe-12 text-Royal_blue">03</span>How do you communicate?
+              </div>
+              <div class="collapse-content ps-[92px] pb-3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                <span class="pe-12 text-Royal_blue">04</span>I have a bigger project. Can you handle it?
+              </div>
+              <div class="collapse-content ps-[92px] pb-3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                <span class="pe-12 text-Royal_blue">05</span> What is your class naming convention?
+              </div>
+              <div class="collapse-content ps-[92px] pb-3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--frequently Question part ends -->
     <!--===========================
          inquiry part start here 
         =========================-->
-    <section class="mt-[46px] pb-[100px]">
+    <section class="pb-[100px]">
       <div class="container max-w-[1280px] mx-auto flex">
         <div class="bg-inquiry_image bg-cover bg-center bg-no-repeat">
           <div class="bg-overly_color pt-[96px] ps-[98px]">
