work part corrected

--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
               </p>
             </div>
             <div>
-              <img src="./images/pointer 1 (1).png" alt="pointer 1 (1).png" />
+              <img src="./images/pointer 1 (2).png" alt="pointer 1 (2).png" />
               <h2
                 class="w-[303px] font-primary_fonts text-[32px] leading-[48px] font-medium text-dark_blue_color py-[12px]"
               >
-                Strategy
+              Wireframing
               </h2>
               <p
                 class="font-primary_fonts text-[16px] leading-[28px] font-normal text-dark_blue_color opacity-70 w-[320px]"
@@ -176,11 +176,11 @@
               </p>
             </div>
             <div>
-              <img src="./images/pointer 1 (1).png" alt="pointer 1 (1).png" />
+              <img src="./images/pointer 1 (3).png" alt="pointer 1 (3).png" />
               <h2
                 class="w-[303px] font-primary_fonts text-[32px] leading-[48px] font-medium text-dark_blue_color py-[12px]"
               >
-                Strategy
+              Design
               </h2>
               <p
                 class="font-primary_fonts text-[16px] leading-[28px] font-normal text-dark_blue_color opacity-70 w-[320px]"
@@ -190,11 +190,11 @@
               </p>
             </div>
             <div>
-              <img src="./images/pointer 1 (1).png" alt="pointer 1 (1).png" />
+              <img src="./images/pointer 1.png" alt="pointer 1.png" />
               <h2
                 class="w-[303px] font-primary_fonts text-[32px] leading-[48px] font-medium text-dark_blue_color py-[12px]"
               >
-                Strategy
+              Development
               </h2>
               <p
                 class="font-primary_fonts text-[16px] leading-[28px] font-normal text-dark_blue_color opacity-70 w-[320px]"
@@ -464,47 +464,47 @@
           <div class="col-span-8">
             <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
               <input type="radio" name="my-accordion-3" checked="checked" />
-              <div class="collapse-title text-xl font-medium">
+              <div class="collapse-title text-xl font-medium font-medium font-primary_fonts text-[24px] leading-[36px] font-medium text-dark_blue_color">
                <span class="pe-12 text-Royal_blue">01</span> How much time does it take?
               </div>
               <div class="collapse-content ps-[92px] pb-3">
-                <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text-dark_blue_color font-primary_fonts text-[16px] font-normal leading-[28px] opacity-70">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
             <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
               <input type="radio" name="my-accordion-3" />
-              <div class="collapse-title text-xl font-medium">
+              <div class="collapse-title text-xl font-medium font-primary_fonts text-[24px] leading-[36px] font-medium text-dark_blue_color">
                 <span class="pe-12 text-Royal_blue">02</span>What is your class naming convention?
               </div>
               <div class="collapse-content ps-[92px] pb-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text-dark_blue_color font-primary_fonts text-[16px] font-normal leading-[28px] opacity-70">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
             <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
               <input type="radio" name="my-accordion-3" />
-              <div class="collapse-title text-xl font-medium">
+              <div class="collapse-title text-xl font-medium font-medium font-primary_fonts text-[24px] leading-[36px] font-medium text-dark_blue_color">
                 <span class="pe-12 text-Royal_blue">03</span>How do you communicate?
               </div>
               <div class="collapse-content ps-[92px] pb-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text-dark_blue_color font-primary_fonts text-[16px] font-normal leading-[28px] opacity-70">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
             <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
               <input type="radio" name="my-accordion-3" />
-              <div class="collapse-title text-xl font-medium">
+              <div class="collapse-title text-xl font-medium font-medium font-primary_fonts text-[24px] leading-[36px] font-medium text-dark_blue_color">
                 <span class="pe-12 text-Royal_blue">04</span>I have a bigger project. Can you handle it?
               </div>
               <div class="collapse-content ps-[92px] pb-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text-dark_blue_color font-primary_fonts text-[16px] font-normal leading-[28px] opacity-70">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
             <div class="collapse collapse-plus bg-transparent mb-5 border-b border-gray rounded-none">
               <input type="radio" name="my-accordion-3" />
-              <div class="collapse-title text-xl font-medium">
+              <div class="collapse-title text-xl font-medium font-medium font-primary_fonts text-[24px] leading-[36px] font-medium text-dark_blue_color">
                 <span class="pe-12 text-Royal_blue">05</span> What is your class naming convention?
               </div>
               <div class="collapse-content ps-[92px] pb-3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text-dark_blue_color font-primary_fonts text-[16px] font-normal leading-[28px] opacity-70">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
             </div>
           </div>
@@ -704,7 +704,7 @@
                   Email me at
                 </h4>
                 <p
-                  class="pt-[18px] font-primary_fonts text-[16px] font-normal leading-[28px] pb-[16px]"
+                  class="pt-[14px] font-primary_fonts text-[16px] font-normal leading-[28px] pb-[14px]"
                 >
                   contact@website.com
                 </p>
@@ -716,7 +716,7 @@
                   Call us
                 </h4>
                 <p
-                  class="pt-[18px] font-primary_fonts text-[16px] font-normal leading-[28px] pb-[16px]"
+                  class="pt-[14px] font-primary_fonts text-[16px] font-normal leading-[28px] pb-[14px]"
                 >
                   0927 6277 28525
                 </p>
